# geom2

./: Cargo.toml  README.md
examples/: intersect_to.rs
src/: arc.rs  circle.rs  lib.rs  line.rs  meta.rs  plane.rs  polygon.rs  util.rs  vertex.rs
src/polygon/: circle.rs  line.rs  mod.rs
src/tests/: arc.rs  circle.rs  line.rs  mod.rs  moment.rs  plane.rs
src/tests/polygon/: circle.rs  line.rs  mod.rs
src/util/: approx.rs  mod.rs
