[package]
name = "geom2"
version = "0.1.0"
edition = "2024"
description = "2D geometry primitives and utilities"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/agerasev/geom2"
repository = "https://github.com/agerasev/geom2"
documentation = "https://docs.rs/geom2"

[dependencies]
glam = { version = "0.31.0", default-features = false, features = [
    "nostd-libm",
] }
either = { version = "1.15.0", default-features = false }

[dev-dependencies]
approx = "0.5.1"
glam = { version = "0.31.0", features = ["approx"] }
